[package]
name = "clockin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde_json = "1.0"
serde = "0.9"
serde_derive = "0.9"
chrono = "0.4.19"